--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
     <script src="https://code.jquery.com/jquery.js"></script>
 <div class="container">
-    <div>
+    <div id="wrapper">
         <h1>Trivia for Crazy Cunucks!</h1>
         <h2>Answer the following questions correctly in 30 seconds and let's see just how crazy a Cunuck you are!</h2>
-        
-
+    </div>    
+    <div id="subwrapper">
         <button type="button" class="btn" id="startGame">Start the Timer, eh?</button>
+
+    </div>
         <form action="">
             <p class="question1">
                 1. Who is the current Prime Minister?<br>
@@ -26,61 +28,61 @@
                 <input type="radio" name="" id="">Brian Mulroney <br>
             </p>
             <p class="question2">
-                2. What is the capital of Canada?
+                2. What is the capital of Canada?<br>
                 <input type="radio">Ottawa<br>
                 <input type="radio">Montreal<br>
                 <input type="radio">Toronto<br>
                 <input type="radio">Winnipeg<br>
             </p>
             <p class="question3">
-                3. What city is the coldest in the world for its population?
+                3. What city is the coldest in the world for its population?<br>
                     <input type="radio">Neepawa<br>
                     <input type="radio">Winnipeg<br>
                     <input type="radio">Montreal<br>
                     <input type="radio">Vancouver<br>
             </p>
             <p class="question4">
-                4. Are Canadians cool?
+                4. Are Canadians cool?<br>
                     <input type="radio">Most of the time<br>
                     <input type="radio">Absolutely<br>
                     <input type="radio">Depends on how close they are to a hockey game<br>
                     <input type="radio">All the above<br>
             </p>
             <p class="question5">
-                5. What are the official languages of Canada?
+                5. What are the official languages of Canada?<br>
                     <input type="radio">English and French<br>
                     <input type="radio">Englsih only<br>
                     <input type="radio">French only<br>
                     <input type="radio">English and British<br>
             </p>
             <p class="question6">
-                6. How many provinces does Canada have?
+                6. How many provinces does Canada have?<br>
                     <input type="radio">10<br>
                     <input type="radio">12<br>
                     <input type="radio">15<br>
                     <input type="radio">5<br>
             </p>
             <p class="quetion7">
-                7. Which sport was invented in Canada?
+                7. Which sport was invented in Canada?<br>
                     <input type="radio">Skiing<br>
                     <input type="radio">Buffalo Races<br>
                     <input type="radio">Hockey<br>
                     <input type="radio">Baseball<br>
             </p>
             <p class="question8">
-                8. What do Canadians call macaroni and cheese?
+                8. What do Canadians call macaroni and cheese?<br>
                     <input type="radio">Cheese<br>
                     <input type="radio">Macaroni<br>
                     <input type="radio">Kraft Dinner<br>
                     <input type="radio">That delicious yellow stuff<br>
             </p>
-            <p class="question9">9. What Canadian franchise is famous for sellling donuts?
+            <p class="question9">9. What Canadian franchise is famous for sellling donuts?<br>
                     <input type="radio">Dunkin' Donuts<br>
                     <input type="radio">Tim Hortons<br>
                     <input type="radio">Safeway<br>
                     <input type="radio">McDonalds<br>
             </p>
-            <p class="question10">10. What do tourists buy most in Canada?
+            <p class="question10">10. What do tourists buy most in Canada?<br>
                     <input type="radio">Maple Syrup<br>
                     <input type="radio">Sweaters<br>
                     <input type="radio">Snow<br>
@@ -92,7 +94,7 @@
 
 </div>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/app.js"></script>
 </body>
 </html>
