some fine tuning

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <script src="https://code.jquery.com/jquery.js"></script>
 <div class="container">
-    <div id="wrapper">
-        <h1>Trivia for Crazy Cunucks!</h1>
-        <h2>Answer the following questions correctly in 30 seconds and let's see just how crazy a Cunuck you are!</h2>
+    <div class="jumbotron" id="wrapper">
+        <h1 class="text-center">Trivia for Crazy Cunucks!</h1>
+        <h2 class="text-center">Answer the following questions correctly in 30 seconds and let's see just how crazy a Cunuck you are!</h2>
     </div>    
-    <div id="subwrapper">
+    <div  id="subwrapper">
         <button type="button" class="btn" id="startGame">Start the Timer, eh?</button>
 
    </div>
